[OTA-4971] [L10N] Layout issue for 'Remove' and 'Leave' buttons in environment detail view

--- a/ota-plus-web/app/reactapp/style/ota-default/override-ant.scss
+++ b/ota-plus-web/app/reactapp/style/ota-default/override-ant.scss
@@ -319,6 +319,11 @@ h3 {
     line-height: 30px;
     &:not(:last-child) {
       border-bottom: 1px solid rgba(0,0,0,0.07);
-    }    
+    }
   }
+}
+
+.ant-btn-two-chinese-chars>:not(.anticon) {
+  margin-left: 2px;
+  margin-right: 0px;
 }
